--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,63 @@ lxml==5.2.1
 openpyxl>=3.1.2
 
 
+################# pip freeze (al día 14 oct 2025) #################
+# annotated-types==0.7.0
+# anyio==4.5.2
+# async-timeout==5.0.1
+# bcrypt==4.3.0
+# beautifulsoup4==4.12.3
+# black==24.8.0
+# certifi==2025.8.3
+# cffi==1.17.1
+# charset-normalizer==3.4.3
+# click==8.1.8
+# cryptography==45.0.7
+# Deprecated==1.2.18
+# dnspython==2.6.1
+# ecdsa==0.19.1
+# email-validator==2.3.0
+# et_xmlfile==2.0.0
+# exceptiongroup==1.3.0
+# fastapi==0.116.1
+# fpdf==1.7.2
+# greenlet==3.1.1
+# h11==0.16.0
+# httpcore==1.0.9
+# httpx==0.28.1
+# idna==3.10
+# importlib_resources==6.4.5
+# limits==3.13.0
+# lxml==5.2.1
+# mypy_extensions==1.1.0
+# openpyxl==3.1.5
+# packaging==24.2
+# passlib==1.7.4
+# pathspec==0.12.1
+# pillow==10.4.0
+# platformdirs==4.3.6
+# pyasn1==0.4.8
+# pycparser==2.23
+# pydantic==2.10.6
+# pydantic_core==2.27.2
+# PyMuPDF==1.24.11
+# PyMySQL==1.1.2
+# python-dotenv==1.0.1
+# python-jose==3.4.0
+# python-multipart==0.0.20
+# redis==6.1.1
+# requests==2.32.4
+# rsa==4.9.1
+# six==1.17.0
+# slowapi==0.1.9
+# sniffio==1.3.1
+# soupsieve==2.7
+# SQLAlchemy==2.0.43
+# starlette==0.44.0
+# tomli==2.2.1
+# typing_extensions==4.13.2
+# urllib3==2.2.3
+# uvicorn==0.33.0
+# wrapt==1.17.3
+# zipp==3.20.2
+
