--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ packaging==24.2
 passlib==1.7.4
 pathspec==0.12.1
 pillow==10.4.0
+pillow-heif==0.18.0
 platformdirs==4.3.6
 pyasn1==0.4.8
 pycparser==2.23
